@@ -8,6 +8,10 @@
     + $config['disable_main_login_form'] shows blank page (#4317);
     + Unable to clear custom fields (#4313);
 
+    Security Fixes:
+    ----------------------------
+    + XSS - reflected via HTTP_X_FORWARDED_PORT;
+
 == 1.7.0
 
     New features:
